Task5/namespace.yaml
# Namespace для сервисов умного дома
apiVersion: v1
kind: Namespace
metadata:
  name: propdevelopment
  labels:
    name: propdevelopment
    environment: production
    component: smart-home
